fix double scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,8 @@ body {
   position: relative;
   height: 100%;
   font-family: "EB Garamond", serif;
+}
+body {
   overflow-y: scroll;
 }
 
